fix FF "when" spacing

--- a/styles/programdetails.scss
+++ b/styles/programdetails.scss
@@ -13,6 +13,14 @@
   margin-bottom: 0;
 }
 
+.no-above {
+  margin-top: 0;
+}
+
+.no-above2 {
+  margin-top: -1em;
+}
+
 #uncommonsense {
   * {
       font-family: 'Duru Sans', sans-serif;
